# Kine

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  TODO  move-hpp  revision_history.txt
.github/workflows/: kine.yaml
assets/shaders/: screen.frag  sprite.frag  sprite.vert
examples/flappy_bird/: main.cpp
examples/flappy_bird/assets/shaders/: blit.vert
examples/test/: main.cpp
examples/test/assets/shaders/: blit.frag  screen.frag  screen.vert
include/: detail.hpp  kine.hpp  log.h  log.hpp  math.hpp
include/core/: scheduler.hpp  time.hpp
include/ecs/: ecs.hpp
include/flow/: flow_object.hpp  flow_tree.hpp
include/io/: input.hpp
include/kine/: detail.hpp  kine.hpp  log.hpp  version.hpp
include/kine/core/: scheduler.hpp
include/kine/ecs/: ecs.hpp
include/kine/flow/: flow_object.hpp  flow_tree.hpp
include/kine/io/: input.hpp
include/kine/render/: font.hpp  render_command.hpp  render_list.hpp  renderer.hpp  window.hpp
include/kine/resources/: error_texture.hpp  font_manager.hpp  resource_manager.hpp  texture_manager.hpp
include/render/: font.hpp  render_batcher.hpp  render_list.hpp  renderer.hpp  window.hpp
include/resources/: font_manager.hpp  resource_manager.hpp  shader_manager.hpp  texture_manager.hpp
src/: GL.hpp  kine.cpp  kine.hpp  main.cpp
src/core/: scheduler.cpp  time.cpp  time.hpp
src/ecs/: ecs.hpp
src/flow/: flow_object.cpp  flow_object.hpp  flow_tree.cpp  flow_tree.hpp
src/io/: input.cpp  input.hpp
src/render/: render_batcher.cpp  render_batcher.hpp  render_command.hpp  render_list.cpp  render_list.hpp  renderer.cpp  renderer.hpp  renderer2d_shaders.hpp  texture2d.hpp  window.cpp  window.hpp
src/resources/: font_manager.cpp  font_manager.hpp  resource_manager.cpp  resource_manager.hpp  shader_manager.cpp  shader_manager.hpp  texture_manager.cpp  texture_manager.hpp
